@@ -16,6 +16,7 @@ import net.minecraft.server.level.ServerLevel;
 import net.minecraft.sounds.SoundEvent;
 import net.minecraft.sounds.SoundEvents;
 import net.minecraft.sounds.SoundSource;
+import net.minecraft.tags.ItemTags;
 import net.minecraft.tags.TagKey;
 import net.minecraft.util.Mth;
 import net.minecraft.util.RandomSource;
@@ -29,11 +30,9 @@ import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.phys.AABB;
 import net.minecraft.world.phys.Vec3;
 import net.minecraftforge.registries.ForgeRegistries;
+import net.minecraftforge.registries.tags.ITagManager;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import java.util.Random;
+import java.util.*;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
@@ -140,13 +139,12 @@ public class Utilities {
         return new Vec3(origin.x + offsetX, origin.y + offsetY,origin.z + offsetZ);
     }
 
-    public static List<Item> getItemsFromTag(ServerLevel level, String namespace, String tagName) {
-        Registry<Item> itemRegistry = level.registryAccess().registryOrThrow(Registry.ITEM_REGISTRY);
-
-        TagKey<Item> tagKey = TagKey.create(Registry.ITEM_REGISTRY, new ResourceLocation(namespace, tagName));
-
-        return itemRegistry.getTag(tagKey)
-                .map(tag -> tag.stream().map(Holder::value).collect(Collectors.toList()))
-                .orElse(List.of());  // Return an empty list if no items are found
+    public static List<Item> getItemsFromTag(String tagName) {
+        ITagManager<Item> tagManager = ForgeRegistries.ITEMS.tags();
+        if (tagManager == null) {
+            return Collections.emptyList();
+        }
+        var tag = tagManager.getTag(ItemTags.create(new ResourceLocation(tagName)));
+        return tag.stream().collect(Collectors.toList());
     }
 }
